data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2107.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7f\60\00\00\02\95\80\80\80\00\01\03\65\6e"
    "\76\0d\69\6d\70\6f\72\74\65\64\5f\66\75\6e\63\00"
    "\00\03\83\80\80\80\00\02\01\00\0a\a3\80\80\80\00"
    "\02\8a\80\80\80\00\00\41\01\04\40\01\05\01\0b\0b"
    "\8e\80\80\80\00\00\41\00\04\7f\41\2a\05\10\00\10"
    "\01\0b\0b"
  )
""
)